# destination-iceberg

./: Cargo.toml  README.md
.github/workflows/: dockerhub.yml
destination-iceberg/: Cargo.toml
destination-iceberg-file/: Cargo.toml  Dockerfile_java  Dockerfile_python
destination-iceberg-file/src/: main.rs
destination-iceberg-file/src/plugin/: mod.rs
destination-iceberg-sql/: Cargo.toml  Dockerfile_java  Dockerfile_python
destination-iceberg-sql/src/: main.rs
destination-iceberg-sql/src/plugin/: mod.rs
destination-iceberg/src/: catalog.rs  error.rs  ingest.rs  plugin.rs  schema.rs  state.rs
testdata/faker/: catalog.json  discover.json
testdata/inventory/: catalog.json  discover.json  input1.txt  input2.txt
testdata/mysql/: catalog.json  discover.json  input1.txt  input2.txt  state.json
testdata/s3/: catalog.json  discover.json  input1.txt
