[workspace]

members = [
    "destination-iceberg", "destination-iceberg-sql", "destination-iceberg-file",
]

resolver = "2"

[workspace.dependencies]
airbyte-protocol = "0.1.0"
arrow = "53.2.0"
async-trait = "0.1"
object_store = { version = "0.11.0", features = ["aws", "gcp"] }
dashtool-common = "0.1"
futures = "0.3.30"
iceberg-rust = { git = "https://github.com/jankaul/iceberg-rust", version = "0.5" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-futures = "0.2"
