[workspace]

members = [
    "destination-iceberg", "destination-iceberg-sql", "destination-iceberg-file",
]

resolver = "2"

[workspace.dependencies]
airbyte-protocol = "0.1.0"
arrow = "53.3.0"
async-trait = "0.1"
object_store = { version = "0.11.1", features = ["aws", "gcp"] }
dashtool-common = "0.1"
futures = "0.3.30"
iceberg-rust = { git = "https://github.com/jankaul/iceberg-rust", version = "0.5", branch = "copy-if-not-exists" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-futures = "0.2"

[patch.crates-io]
object_store = { version = "0.11.1", features = ["aws", "gcp"], git = "https://github.com/apache/arrow-rs", rev = "c60ce14" }
