[package]
name = "destination-iceberg-file"
version = "0.1.0"
edition = "2021"

[dependencies]
airbyte-protocol = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { version = "4", features = ["derive"] }
dashtool-common = { workspace = true }
futures = { workspace = true }
iceberg-file-catalog = { git = "https://github.com/jankaul/iceberg-rust", version = "0.5" }
iceberg-rust = { workspace = true }
object_store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
destination-iceberg = { path = "../destination-iceberg/" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.8.1"
